// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Issue Relation Add Command - Help Text 1`] = `
"stdout:
"Usage: issue relation add [options] <issueId> <relationType> <relatedIssueId>

Add a relation between two issues

Options:
  -h, --help  display help for command

Examples:
  $ linear issue relation add ENG-123 blocked-by ENG-100
  $ linear issue relation add ENG-123 blocks ENG-456
  $ linear issue relation add ENG-123 related ENG-456
  $ linear issue relation add ENG-123 duplicate ENG-100
"
stderr:
"""
`;

exports[`Issue Relation Add Command - blocks 1`] = `
"stdout:
"✓ Created relation: ENG-123 blocks ENG-456
"
stderr:
"""
`;

exports[`Issue Relation Add Command - blocked-by shows correct order 1`] = `
"stdout:
"✓ Created relation: ENG-123 blocked-by ENG-456
"
stderr:
"""
`;
